# ChangeLog for app-crypt/heimdal
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/app-crypt/heimdal/ChangeLog,v 1.8 2002/12/13 10:56:01 blizzy Exp $

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*heimdal-0.5.1-r1 (06 Dec 2002)

  06 Dec 2002; Kain X <kain@kain.org> heimdal-0.5.1-r1.ebuild :
  Initial setup for new virtual/krb5 structure.  Shared libraries are also now
  built, but krb4 is not linked in in this case.  If you really want krb4, you
  can say USE="krb4" emerge heimdal.  This will be improved in later releases.

*heimdal-0.5.1 (26 Oct 2002)

  26 Oct 2002; Daniel Ahlberg <aliz@gentoo.org> :
  Security update. Found by Ian <ian@stacken.kth.se>.

*heimdal-0.5 (14 Oct 2002)
  
  14 Oct 2002; Daniel Ahlberg <aliz@gentoo.org> :
  Security update.

*heimdal-0.4e-r1 (1 Feb 2002)

  09 Sep 2002; Seemant Kulleen <seemant@gentoo.org> heimdal-0.4e-r1.ebuild :

  emake->make. Discovery and correction by: ian@stacken.kth.se (Ian) in bug
  #7632.

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.