@@ -1,6 +1,6 @@
 # Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/krb5/krb5-1.2.6-r1.ebuild,v 1.2 2002/12/09 04:17:37 manson Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/krb5/krb5-1.2.6-r1.ebuild,v 1.3 2003/01/21 05:07:09 raker Exp $
 
 inherit eutils
 
@@ -13,7 +13,7 @@ IUSE="doc"
 SLOT="0"
 LICENSE="as-is"
 KEYWORDS="x86 ~sparc "
-PROVIDES="virtual/krb5"
+PROVIDE="virtual/krb5"
 
 DEPEND="virtual/glibc"
 
