@@ -1,14 +1,16 @@
 # ChangeLog for app-crypt/krb5
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/krb5/ChangeLog,v 1.9 2002/12/13 10:56:01 blizzy Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/krb5/ChangeLog,v 1.10 2003/01/21 05:07:09 raker Exp $
 
   06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
  
 *krb5-1.2.6-r1 (06 Dec 2002)
 
+  20 Jan 2003; Nick Hadaway <raker@gentoo.org> krb5-1.2.6-r1.ebuild :
+  Changed PROVIDES to PROVIDE.
+
   06 Dec 2002; Matt Keadle <mkeadle@gentoo.org> krb5-1.2.6-r1.ebuild
   files/digest-krb5-1.2.6-r1 files/krb5-1.2.6-r1.diff
-
   Now provides virtual/krb5. Client utils are also installed now with
   a leading "k" to signify their kerberos use and not to overlap the
   standard tool. IE: /usr/bin/ftp is the standard ftp client, while
